# swift-cmake-examples

./: .gitignore  CMakeLists.txt  README.md
BuildDependencies-CMake/: CMakeLists.txt
BuildDependencies-CMake/Sources/: CMakeLists.txt
BuildDependencies-CMake/Sources/L/: CMakeLists.txt
BuildDependencies/Sources/L/: L.swift
HelloMinimal/: CMakeLists.txt
HelloMinimal-CMake/: README.md
HelloWorld/: README.md
HelloWorld-CMake/: CMakeLists.txt  README.md
HelloWorld-CMake/Source/: CMakeLists.txt
HelloWorld-CMake/Source/CCore/: CCoreMacros.h  CCoreVersion.c  CMakeLists.txt  module.modulemap
HelloWorld-CMake/Source/HelloWorld/: HelloWorld.swift
HelloWorld-CMake/Source/HelloWorldCore/: CMakeLists.txt  _HelloWorldCore.swift
HelloWorld/Source/CCore/: CCoreVersion.h
HelloWorld/Source/HelloWorldCore/: CMakeLists.txt  HelloWorldCore.swift
HelloWorld/Tests/TestHelloWorldCore/: CMakeLists.txt
Interop/: CMakeLists.txt
Interop/Sources/: CMakeLists.txt
Interop/Sources/CXX/: CMakeLists.txt
Interop/Sources/Swift/: CMakeLists.txt
Interop/Sources/Swift/Executable/: CMakeLists.txt  E.swift
Source/: CMakeLists.txt
Source/CCore/: CCoreVersion.c  CMakeLists.txt
Source/CLibrary/: CMakeLists.txt  Library.c
Source/HelloWorld/: CMakeLists.txt  HelloWorld.swift
Source/HelloWorldCore/: CMakeLists.txt  HelloWorldCore.swift
Tests/: CMakeLists.txt
Tests/TestHelloWorldCore/: TestHelloWorldCore.swift
Vendoring/: CMakeLists.txt
Vendoring/Sources/: E.swift
